Se solventa los erroes
